# poppa

./: .gitignore  README.md  pyproject.toml
src/poppa/: __init__.py  __main__.py  dates.py  errors.py  export.py  families.py  load.py  people.py  places.py  places.toml
