[project]
name = "poppa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gender-guesser>=0.4.0",
    "pyexcel>=0.7.1",
    "pyexcel-ods>=0.6.0",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.1",
]

[project.scripts]
poppa = "poppa.__main__:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "F", # flake8
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "FURB", # refurb
    "UP", # pyupgrade
    "I", # isort
]

[tool.mypy]
packages = "poppa"
strict = true
